# lean-bindgen

./: .gitignore  LeanBindgen.lean  Main.lean  README.md  ROADMAP.md  lake-manifest.json  lakefile.lean  pyproject.toml
LeanBindgen/: Basic.lean
bindgen/: __init__.py  __main__.py  codegen.py  ir.py  ir_builder.py  ir_printer.py  mapper.py  parser.py  type_mapper.py
c/: ffi.c  simple_math.c
tests/: test_build_time.py  test_e2e.py  test_snapshot.py
tests/e2e/: Main.lean  lakefile.lean
tests/e2e/c/: handle_lib.c  handle_lib.h  simple_math.h
tests/expected/mixed_api/: MixedApi.lean  ffi.c
tests/expected/opaque_ptr/: OpaquePtr.lean  ffi.c
tests/expected/simple_math/: SimpleMath.lean  ffi.c
tests/expected/string_api/: StringApi.lean  ffi.c
tests/headers/: mixed_api.h  opaque_ptr.h  string_api.h
